--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: #99A799;
+  background-color: #99a799;
 }
 h1 {
   font-size: 70px;
@@ -25,51 +25,48 @@ p {
   text-transform: capitalize;
 }
 small {
-color: #E2C2B9;
-font-family: courier;
+  color: #e2c2b9;
+  font-family: courier;
 }
 a {
-color: #E2C2B9;
-text-decoration: none;
+  color: #e2c2b9;
+  text-decoration: none;
 }
 a:hover {
-color: #E2C2B9;
-text-decoration: underline; 
+  color: #e2c2b9;
+  text-decoration: underline;
 }
 .container {
   padding-top: 30px;
   opacity: var(-100px);
   max-width: 800px;
   margin: 0 auto;
-  color: #99A799;
+  color: #99a799;
 }
 .card {
-background-color: #D3E4CD;
-border-color: #E2C2B9;
+  background-color: #d3e4cd;
+  border-color: #e2c2b9;
 }
 .search-form {
   position: relative;
-  right: -250px;
 }
 .search-button {
-  background-color: #E2C2B9;
-  border: #E2C2B9;
+  background-color: #e2c2b9;
+  border: #e2c2b9;
   border-radius: 3px;
   color: white;
   font-size: 15px;
   padding: 3px;
   position: relative;
-  right: 100px;
 }
 .current-button {
-  background-color: #E2C2B9;
-  border: #E2C2B9;
+  background-color: #e2c2b9;
+  border: #e2c2b9;
   border-radius: 3px;
   color: white;
   font-size: 15px;
   padding: 3px;
   position: relative;
-  right: 115px;
 }
 
 .degrees {
@@ -86,12 +83,8 @@ border-color: #E2C2B9;
   width: 225px;
 }
 
-.wind-speed {
-text-transform: lowercase;
-}
-
 .weather-forecast {
-  color: #99A799;
+  color: #99a799;
   font-weight: 500;
   margin-top: 20px;
   text-align: center;
